fdo#55493 fix RTF import of specific PNG image

The image was special in that the resulting Graphic's
GetPrefMapMode().GetMapUnit() wasn't MAP_PIXEL.

Change-Id: I681e344a042721b99f6cb2e599f9c65156d219a4